--- a/proyectoCEIJA5/src/estilos/estilosInscripcion.css
+++ b/proyectoCEIJA5/src/estilos/estilosInscripcion.css
@@ -1,3 +1,22 @@
+/* Header del formulario */
+.form-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 25px;
+  padding-bottom: 15px;
+  border-bottom: 2px solid #2d4177;
+}
+
+.form-title {
+  color: #2d4177;
+  font-size: 1.6rem;
+  margin: 0;
+  font-weight: 600;
+  text-align: center;
+  font-family: "Roboto Slab", serif;
+}
+
 /* Contenedor de botones del header del modal */
 .modal-header-buttons {
   position: absolute;
