--- a/proyectoCEIJA5/src/estilos/gestionCRUD.css
+++ b/proyectoCEIJA5/src/estilos/gestionCRUD.css
@@ -8,7 +8,7 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   color: #333;
-  font-family: Arial, sans-serif;
+  font-family: "Roboto Slab", serif;
   position: relative;
   max-height: 90vh;
   overflow-y: auto;
